--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <title>Zephyr Stock Exchange</title>
-  <base href="/remote-stock-exchange/">
+  <!-- <base href="/remote-stock-exchange/"> -->
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
@@ -110,6 +110,7 @@
 
   </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
   <script src="sketch.js"></script>
   <script src="client.js"></script>
