--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-  <title>Zephyr Stock Exchange</title>
+  <title>Satna Stock Exchange</title>
   <!-- <base href="/remote-stock-exchange/"> -->
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
   <div id="lobby" class="screen">
-    <h1>Zephyr Stock Exchange</h1>
+    <h1>Satna Stock Exchange</h1>
     <div class="controls">
       <div class="create-room-section">
         <button id="createRoom">Create Room</button>
