--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
               <button id="sell">Sell</button>
               <button id="shortSell">Short Sell</button>
               <!-- <button id="windfall">Play Windfall</button> -->
-              <button id="pass">Pass</button>
+              <!-- <button id="pass">Pass</button> -->
               <button id="endTurn">End Turn</button>
             </div>
             <div class="admin-action-buttons">
