--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
       </div>
       
       <div class="game-right">
-        <div id="leaderboard" class="panel">
+        <div id="leaderboard" class="panel leaderboard">
           <h2>Leaderboard</h2>
           <div class="leaderboard-content"></div>
         </div>
