--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
   <div id="title-bar">
+    <img src="/logo.svg" alt="Logo" class="app-logo-titlebar" style="height:18px; margin-right:8px; vertical-align:middle;" />
     <span id="game-title-text">SATNA STOCK EXCHANGE</span>
   </div>
 
   <div id="main-content-wrapper">
     <div id="lobby" class="screen">
+      <img src="/logo.svg" alt="Logo" class="app-logo-lobby" style="height:48px; margin-bottom:10px; display:block; margin-left:auto; margin-right:auto;" />
       <h1>Satna Stock Exchange</h1>
       
       <div class="lobby-input-group">
@@ -202,6 +204,7 @@
     <!-- NEW: Game Over Screen -->
     <div id="game-over-screen" class="screen panel" style="display: none; text-align: center;">
       <div class="game-over-content">
+        <img src="/logo.svg" alt="Logo" class="app-logo-endscreen" style="height:48px; margin-bottom:12px; display:block; margin-left:auto; margin-right:auto;" />
         <h2>Game Over!</h2>
         <h4 id="winner-announcement" style="margin-bottom: 15px;">Calculating winner...</h4>
         <div style="width: 80%; max-width: 800px; margin: 20px auto;">
