--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,19 @@
         <div class="game-left">
           <div id="info-bar">
             <span id="period">Period 1</span>
-            <span id="cash">Cash: ₹600,000</span>
+          </div>
+          <div id="portfolio-panel" class="panel">
+            <h4>Your Portfolio</h4>
+            <div id="portfolio-content">
+              <div id="portfolio-summary">
+                <div>Cash: <span id="portfolio-cash">₹600,000</span></div>
+                <div>Portfolio Value: <span id="portfolio-value">₹0</span></div>
+                <div>Total Worth: <span id="portfolio-total">₹600,000</span></div>
+              </div>
+              <div id="portfolio-holdings">
+                <!-- Holdings will be populated by JavaScript -->
+              </div>
+            </div>
           </div>
           <div id="market-board-container"></div>
           <div id="controls">
