--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Satna Stock Exchange</title>
+  <title>Remote Stock Exchange</title>
   <!-- <base href="/remote-stock-exchange/"> -->
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
   <div id="title-bar">
     <img src="/logo.svg" alt="Logo" class="app-logo-titlebar" style="height:18px; margin-right:8px; vertical-align:middle;" />
-    <span id="game-title-text">SATNA STOCK EXCHANGE</span>
+    <span id="game-title-text">Remote Stock Exchange</span>
   </div>
 
   <div id="main-content-wrapper">
     <div id="lobby" class="screen">
       <img src="/logo.svg" alt="Logo" class="app-logo-lobby" style="height:48px; margin-bottom:10px; display:block; margin-left:auto; margin-right:auto;" />
-      <h1>Satna Stock Exchange</h1>
+      <h1>Remote Stock Exchange</h1>
       
       <div class="lobby-input-group">
         <label for="playerName">Your Name:</label>
