--- a/public/index.html
+++ b/public/index.html
@@ -319,6 +319,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script> -->
+  <script src="gradient-shader.js"></script>
   <script src="client.js"></script>
 </body>
 </html>
