--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <div id="title-bar">
     <img src="/logo.svg" alt="Logo" class="app-logo-titlebar" style="height:18px; margin-right:8px; vertical-align:middle;" />
     <span id="game-title-text">Remote Stock Exchange</span>
-    <button id="helpButton" style="position:absolute; right:10px; top:6px; padding:6px 10px; font-size:12px; border-radius:6px; background-color:rgba(255,255,255,0.9); color:#000000; border:1px solid rgba(0,0,0,0.2);">Help</button>
+    <button id="helpButton" style="position:absolute; right:10px; top:50%; transform:translateY(-50%); padding:0; font-size:16px; background:none; color:#ffffff; border:none; cursor:pointer; width:20px; height:20px; display:flex; align-items:center; justify-content:center;">?</button>
   </div>
 
   <div id="main-content-wrapper">
