--- a/public/index.html
+++ b/public/index.html
@@ -227,6 +227,19 @@
               <select id="company">
                 <option value="" disabled selected>Select a company</option>
               </select>
+              
+              <!-- Rights Calculator Widget -->
+              <div id="rights-calculator" style="margin: 15px 0; padding: 12px; background-color: #f8f9fa; border: 1px solid #dee2e6; border-radius: 6px; display: none;">
+                <h3 style="margin: 0 0 10px 0; font-size: 1em; color: #495057;">🎫 Rights Strategy Calculator</h3>
+                <div style="display: flex; gap: 10px; align-items: center; margin-bottom: 10px;">
+                  <label for="rightsCardsInput" style="font-size: 0.9em; white-space: nowrap;">Rights cards in hand:</label>
+                  <input type="number" id="rightsCardsInput" min="0" max="10" value="0" style="width: 60px; padding: 4px; border: 1px solid #ced4da; border-radius: 3px;">
+                </div>
+                <div id="rightsCalculation" style="font-size: 0.85em; color: #6c757d;">
+                  Enter number of rights cards to see strategy
+                </div>
+              </div>
+              
               <div class="quantity-input-container">
                 <input type="number" id="quantityInput" placeholder="Quantity (multiples of 1000)" min="1000" step="1000">
                 <button type="button" class="quantity-btn increment">+</button>
