--- a/public/index.html
+++ b/public/index.html
@@ -393,82 +393,25 @@
     </div>
 
     <!-- NEW: Game Over Screen -->
-    <div id="game-over-screen" class="screen" style="display: none; padding: 20px; max-width: 1400px;">
+    <div id="game-over-screen" class="screen" style="display: none; padding: 20px; max-width: 900px;">
       <div class="game-over-header">
         <img src="/logo.svg" alt="Logo" class="app-logo-endscreen" style="height:48px; margin-bottom:12px;" />
-        <h2>Game Analytics & Results</h2>
+        <h2>Game Results</h2>
         <h4 id="winner-announcement" style="margin-bottom: 20px;">Calculating winner...</h4>
-      </div>
-
-      <!-- Summary Cards Section -->
-      <div class="analytics-grid">
-        <div class="analytics-card" id="game-summary-card">
-          <h3>Game Summary</h3>
-          <div id="game-summary-content"></div>
-        </div>
-        
-        <div class="analytics-card" id="top-performers-card">
-          <h3>Top Performers</h3>
-          <div id="top-performers-content"></div>
-        </div>
-        
-        <div class="analytics-card" id="key-metrics-card">
-          <h3>Key Metrics</h3>
-          <div id="key-metrics-content"></div>
-        </div>
       </div>
 
       <!-- Player Worth Chart -->
       <div class="analytics-section">
-        <h3>Player Net Worth Over Time</h3>
+        <h3>Net Worth Over Time</h3>
         <div class="chart-container">
           <canvas id="playerWorthChart"></canvas>
         </div>
       </div>
 
-      <!-- Detailed Analytics Sections -->
-      <div class="analytics-sections">
-        <!-- Final Standings -->
-        <div class="analytics-section">
-          <h3>Final Standings</h3>
-          <div id="final-standings-table"></div>
-        </div>
-
-        <!-- Company Performance -->
-        <div class="analytics-section">
-          <h3>Company Performance</h3>
-          <div id="company-performance-content"></div>
-        </div>
-
-        <!-- Player Detailed Stats -->
-        <div class="analytics-section">
-          <h3>Player Performance Breakdown</h3>
-          <div id="player-performance-breakdown"></div>
-        </div>
-
-        <!-- Transaction Analysis -->
-        <div class="analytics-section">
-          <h3>Transaction & Activity Analysis</h3>
-          <div id="transaction-analysis-content"></div>
-        </div>
-
-        <!-- Rights & Shorts Analysis -->
-        <div class="analytics-section">
-          <h3>Rights Offerings & Short Positions</h3>
-          <div id="rights-shorts-analysis"></div>
-        </div>
-
-        <!-- Leadership Analysis -->
-        <div class="analytics-section">
-          <h3>Company Leadership</h3>
-          <div id="leadership-analysis"></div>
-        </div>
-
-        <!-- Game Timeline -->
-        <div class="analytics-section">
-          <h3>Game Timeline</h3>
-          <div id="game-timeline-content"></div>
-        </div>
+      <!-- Final Standings -->
+      <div class="analytics-section">
+        <h3>Final Standings</h3>
+        <div id="final-standings-table"></div>
       </div>
 
       <div id="wisdom-quote" class="wisdom-quote"></div>
