--- a/public/index.html
+++ b/public/index.html
@@ -234,9 +234,10 @@
                 <div style="display: flex; gap: 10px; align-items: center; margin-bottom: 10px;">
                   <label for="rightsCardsInput" style="font-size: 0.9em; white-space: nowrap;">Rights cards in hand:</label>
                   <input type="number" id="rightsCardsInput" min="0" max="10" value="0" style="width: 60px; padding: 4px; border: 1px solid #ced4da; border-radius: 3px;">
+                  <button id="calculateRightsBtn" style="padding: 4px 8px; background-color: #007bff; color: white; border: none; border-radius: 3px; cursor: pointer; font-size: 0.8em;">Calculate</button>
                 </div>
                 <div id="rightsCalculation" style="font-size: 0.85em; color: #6c757d;">
-                  Enter number of rights cards to see strategy
+                  Enter number of rights cards and click Calculate
                 </div>
               </div>
               
